results/SVCOMP/4-shot/log-Cookie-2024_03_18_14_12_31.txt
public class Cookie {

  private String name;
  private String value;

  //@ requires name != null && value != null;
  //@ ensures \result != null;
  public Cookie(String name, String value) {
    this.name = name;
    this.value = value;
  }

  //@ ensures \result != null;
  public String getName() {
    return name;
  }

  //@ ensures \result != null;
  public String getValue() {
    return value;
  }
}
/home/max/Documents/JMLGPT/tmp/Cookie.java:7: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result != null;
               ^
1 error

